--- a/sanka.css
+++ b/sanka.css
@@ -1,1 +1,105 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
+header{
+    position: fixed;
+    top: 0; left: 0; 
+    width: 100%;
+    z-index: 9997;
+}
+#site_title{
+    font-size:2.0em;
+    font-weight: bold;
+    color: #fdfafa;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #000;
+    margin-bottom: 10px;
+    background-color: black;
+}
+body{
+    background-color: #130101;
+}
+/*ハンバーガー*/
+#navigation{
+    position: absolute;
+    height: 100vh;
+    width: 30%;
+    left: -30%;
+    top: 0;
+    background: white;
+    z-index: 9998;
+}
+#navigation ul{
+    padding-top: 50px;
+}
+#navigation ul li{
+    list-style: none;
+    padding: 10px 0;
+    text-align: center;
+    border-bottom: 1px solid #000;
+}
+#navigation ul li a{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
+/*ハンバーガーおわ
+ こっから三本線のとこ*/
+#drawer-navigation{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    z-index: 9999;
+}
+ .drawer-line{
+  display: block;
+  width: 30px ;
+  height: 4px;
+  background: black;
+  position: absolute;
+  left:0;
+}
+#line1{
+    top:0;
+    background: white;
+}
+
+#line2{
+    top:10px;
+    background: white;
+}
+#line3{
+    top:20px;
+    background: white;
+}
+.in{
+    transform: translateX(100%);
+}
+
+#drawer-navigation .line_1{
+    transform: translateY(15px) rotate(-45deg);
+    background: black;
+}
+#drawer-navigation .line_2{
+    opacity: 0;
+}
+#drawer-navigation .line_3{
+    transform: translateY(15px) rotate(45deg);
+    background: black;
+}
+.uec{
+  margin-top: 70px;
+  color:white;
+  width: 50%;
+  margin-left: 25%;
+    text-align: center;
+}
+.uec h1{
+    text-decoration: underline;
+}
