--- a/kyoen.css
+++ b/kyoen.css
@@ -122,6 +122,7 @@ main{
     position: relative;
     z-index: 2;
 }
+@media (min-width:700px){
 #introduction .container{
     width: 90%;
     margin: 0 auto;
@@ -225,4 +226,108 @@ dd{
     justify-content: center;
     align-items: center;
 }
+}
+@media (max-width:700px){
+#introduction .container{
+    width: 90%;
+    margin: 0 auto;
+    max-width:1280px;
+    height: 640px;
+    position: relative;
+    z-index: 2;
+}
+#introduction .container h1{
+    font-size: 2.0em;
+    text-align: center;
+    bottom: 20px;
+    margin-bottom: 80px;
+    color: white;
+}
+#introduction .container h2{
+    font-size: 1.5em;
+    text-align: center;
+    color: white;
+}
+#introduction .container p{
+    font-size: 1.5em;
+    text-align: center;
+    bottom: 20px;
+    color: white;
+    margin-bottom: 20px;
+}
+#introduction .container .top{
+    position: absolute;
+    bottom: 0px;
+    color: white;
+}
+.setumei .tutorial h2{
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  font-size: 2.7em;
+  color: lightblue;
+  text-decoration: underline green;
+}
+.setumei .tutorial p{
+    font-size: 1.0em;
+    width: 80%;
+    margin-left:  auto;
+    margin-right: auto;
+    color: lightblue;
+}
 
+.date {
+    padding-top: 10%;
+    color: lightblue;
+    text-align: center;
+}
+
+.date h2 {
+    font-size:3.0em;
+    margin-top: 30px;
+    text-decoration: underline green;
+}
+
+.date h3 {
+    font-size:2.0em;
+}
+
+dt{
+    float: left;
+    clear: left ;
+    margin-right: 0.5em;
+    width: 45%;
+}
+dd{
+    float: left;
+    margin-left: 1em;
+}
+
+.members{
+    font-size: 30px;
+    width: 30%;
+    margin-left: 34%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.n{
+    display: flex;
+    flex-direction: column;
+}
+.adress{
+    color:white;
+    text-align: center;
+    margin-top: 47px;
+}
+
+.adress h1{
+    padding-top: 10%;
+    text-decoration: underline green;
+}
+
+.map{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+}
