--- a/sanka.css
+++ b/sanka.css
@@ -93,6 +93,7 @@ body{
     transform: translateY(15px) rotate(45deg);
     background: black;
 }
+@media(min-width:700px){
 .uec{
   margin-top: 70px;
   color:white;
@@ -102,4 +103,17 @@ body{
 }
 .uec h1{
     text-decoration: underline;
+}
+}
+@media(max-width:700px){
+.uec{
+  margin-top: 70px;
+  color:white;
+  width: 90%;
+  margin-left: 5%;
+    text-align: center;
+}
+.uec h1{
+    text-decoration: underline;
+}
 }
