--- a/kyoen.css
+++ b/kyoen.css
@@ -226,6 +226,9 @@ dd{
     justify-content: center;
     align-items: center;
 }
+.footer-company{
+    padding-top:40px;
+}
 }
 @media (max-width:700px){
 #introduction .container{
@@ -332,5 +335,5 @@ dd{
 }
 .footer-company{
     padding-top:40px;
-}
+}  
 }
